public/style.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #111111;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

#app {
  max-width: 100%;
  max-height: 100vh;
  margin: 0 auto;
  border: none;
}

body {
  color: white;
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  display: flex;
  place-items: center;
  min-width: 320px;
  border: none;
}

#header {
  background-color: #222222;
  color: white;
  text-align: center;
  padding: 10px;
  width: 100vw;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 38px;
}

#header h1 {
  margin: 0;
  margin-bottom: 5px;
}

#link_tray {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 10px;
}

#link_tray a {
  color: white;
  text-decoration: none;
  margin: 0 10px;
}

#box {
  background: linear-gradient(to bottom right, lime, darkgreen);
  color: white;
  text-align: center;
  padding: 20px;
  border-radius: 20px;
  margin: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.box-img {
  width: 35px;
  margin-left: 10px;
}

#msgbox {
  position: absolute;
  background: linear-gradient(to bottom right, lime, darkgreen);
  color: white;
  text-align: center;
  padding: 20px;
  border-radius: 20px;
  margin: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  bottom: 0px;
}

#content {
  background-color: #222222;
  color: white;
  text-align: left;
  padding: 20px;
  border-radius: 20px;
  margin: 20px;
}

.index-h3 {
  position: relative;
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 0.5em;
}

.index-h3 h3::after {
  content: '';
  display: block;
  width: 80%;
  height: 1px;
  background-color: #999999;
  position: absolute;
  bottom: -0.5em;
  left: 0;
}

p {
  margin-top: 1.66em;
  margin-bottom: 3.25em;
}
      
#box h2 {
  display: inline;
  margin-left: 10px;
}

.dropbtn {
  background-color: #333333;
  color: white;
  padding: 12px 17px;
  font-size: 16px;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  top: 50%;
  display: inline;
  position: absolute;
}

.dropbtn:hover, .dropbtn:focus {
  background-color: #111111;
}

.dropdown {
  position: absolute;
  margin-left: 0.5em;
  left: 0;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  top: 40px;
  left: 0;
  border-radius: 10px;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  border-radius: 10px;
}

.dropdown-content a:hover {
  background-color: #ddd;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.lime-logo {
  position: absolute;
  top: 0.75%;
  right: 1%;
}

.compatibility-list {
  padding-left: 50px;
}

